# pkg/apiserver/api/v1/service.pb.go
@@ -24,6 +24,7 @@ import (
 	math "math"
 
 	proto "github.com/golang/protobuf/proto"
+	empty "github.com/golang/protobuf/ptypes/empty"
 	_ "google.golang.org/genproto/googleapis/api/annotations"
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
@@ -206,6 +207,69 @@ func (m *ServiceGetRequest) GetAccount() string {
 	return ""
 }
 
+type ServiceDeleteRequest struct {
+	Service              string   `protobuf:"bytes,1,opt,name=service,proto3" json:"service,omitempty"`
+	Version              string   `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
+	Name                 string   `protobuf:"bytes,3,opt,name=name,proto3" json:"name,omitempty"`
+	Account              string   `protobuf:"bytes,4,opt,name=account,proto3" json:"account,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *ServiceDeleteRequest) Reset()         { *m = ServiceDeleteRequest{} }
+func (m *ServiceDeleteRequest) String() string { return proto.CompactTextString(m) }
+func (*ServiceDeleteRequest) ProtoMessage()    {}
+func (*ServiceDeleteRequest) Descriptor() ([]byte, []int) {
+	return fileDescriptor_a0b84a42fa06f626, []int{3}
+}
+
+func (m *ServiceDeleteRequest) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ServiceDeleteRequest.Unmarshal(m, b)
+}
+func (m *ServiceDeleteRequest) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ServiceDeleteRequest.Marshal(b, m, deterministic)
+}
+func (m *ServiceDeleteRequest) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ServiceDeleteRequest.Merge(m, src)
+}
+func (m *ServiceDeleteRequest) XXX_Size() int {
+	return xxx_messageInfo_ServiceDeleteRequest.Size(m)
+}
+func (m *ServiceDeleteRequest) XXX_DiscardUnknown() {
+	xxx_messageInfo_ServiceDeleteRequest.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ServiceDeleteRequest proto.InternalMessageInfo
+
+func (m *ServiceDeleteRequest) GetService() string {
+	if m != nil {
+		return m.Service
+	}
+	return ""
+}
+
+func (m *ServiceDeleteRequest) GetVersion() string {
+	if m != nil {
+		return m.Version
+	}
+	return ""
+}
+
+func (m *ServiceDeleteRequest) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *ServiceDeleteRequest) GetAccount() string {
+	if m != nil {
+		return m.Account
+	}
+	return ""
+}
+
 type ServiceListRequest struct {
 	Service              string   `protobuf:"bytes,1,opt,name=service,proto3" json:"service,omitempty"`
 	Version              string   `protobuf:"bytes,2,opt,name=version,proto3" json:"version,omitempty"`
@@ -222,7 +286,7 @@ func (m *ServiceListRequest) Reset()         { *m = ServiceListRequest{} }
 func (m *ServiceListRequest) String() string { return proto.CompactTextString(m) }
 func (*ServiceListRequest) ProtoMessage()    {}
 func (*ServiceListRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_a0b84a42fa06f626, []int{3}
+	return fileDescriptor_a0b84a42fa06f626, []int{4}
 }
 
 func (m *ServiceListRequest) XXX_Unmarshal(b []byte) error {
@@ -299,7 +363,7 @@ func (m *ServiceCreateRequest) Reset()         { *m = ServiceCreateRequest{} }
 func (m *ServiceCreateRequest) String() string { return proto.CompactTextString(m) }
 func (*ServiceCreateRequest) ProtoMessage()    {}
 func (*ServiceCreateRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_a0b84a42fa06f626, []int{4}
+	return fileDescriptor_a0b84a42fa06f626, []int{5}
 }
 
 func (m *ServiceCreateRequest) XXX_Unmarshal(b []byte) error {
@@ -352,6 +416,7 @@ func init() {
 	proto.RegisterType((*Service)(nil), "kubecarrier.api.v1.Service")
 	proto.RegisterType((*ServiceList)(nil), "kubecarrier.api.v1.ServiceList")
 	proto.RegisterType((*ServiceGetRequest)(nil), "kubecarrier.api.v1.ServiceGetRequest")
+	proto.RegisterType((*ServiceDeleteRequest)(nil), "kubecarrier.api.v1.ServiceDeleteRequest")
 	proto.RegisterType((*ServiceListRequest)(nil), "kubecarrier.api.v1.ServiceListRequest")
 	proto.RegisterType((*ServiceCreateRequest)(nil), "kubecarrier.api.v1.ServiceCreateRequest")
 }
@@ -361,38 +426,41 @@ func init() {
 }
 
 var fileDescriptor_a0b84a42fa06f626 = []byte{
-	// 488 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x54, 0xc1, 0x6e, 0xd3, 0x40,
-	0x10, 0x95, 0xe3, 0x24, 0x4d, 0x27, 0xea, 0x81, 0x51, 0x85, 0xac, 0x50, 0x41, 0x64, 0x01, 0xf2,
-	0xc9, 0xab, 0xa4, 0x42, 0x42, 0x29, 0x17, 0xca, 0xa1, 0x17, 0x10, 0x92, 0x7b, 0xe3, 0xb6, 0x31,
-	0xa3, 0x6a, 0xc1, 0xf1, 0xa6, 0xde, 0xb1, 0x0f, 0x44, 0xb9, 0x70, 0x86, 0x0b, 0x88, 0x9f, 0xe1,
-	0xc0, 0x4f, 0xf0, 0x0b, 0x7c, 0x08, 0xf2, 0x7a, 0x5b, 0x12, 0x5a, 0x8c, 0xd4, 0xde, 0xe6, 0xad,
-	0xdf, 0xee, 0x7b, 0x6f, 0x66, 0x64, 0xd8, 0x33, 0x54, 0x54, 0x2a, 0xa5, 0x78, 0x59, 0x68, 0xd6,
-	0x88, 0xef, 0xcb, 0x39, 0xa5, 0xb2, 0x28, 0x14, 0x15, 0xb1, 0x5c, 0xaa, 0xb8, 0x9a, 0x8c, 0x0e,
-	0xce, 0xb4, 0x3e, 0xcb, 0x48, 0xc8, 0xa5, 0x12, 0x32, 0xcf, 0x35, 0x4b, 0x56, 0x3a, 0x37, 0xcd,
-	0x8d, 0x11, 0x2c, 0x88, 0x65, 0x53, 0x87, 0xe7, 0xb0, 0x73, 0xda, 0x3c, 0x87, 0x33, 0x18, 0xd4,
-	0x1f, 0xde, 0x4a, 0x96, 0x81, 0x37, 0xf6, 0xa2, 0xe1, 0xf4, 0x7e, 0x7c, 0xf5, 0xed, 0xf8, 0xf5,
-	0xfc, 0x1d, 0xa5, 0xfc, 0x8a, 0x58, 0x26, 0x97, 0x7c, 0x44, 0xe8, 0x9a, 0x25, 0xa5, 0x41, 0x67,
-	0xec, 0x45, 0xbb, 0x89, 0xad, 0xf1, 0x2e, 0xf4, 0x0d, 0x4b, 0x2e, 0x4d, 0xe0, 0xdb, 0x53, 0x87,
-	0xc2, 0x0f, 0x30, 0x74, 0x92, 0x2f, 0x95, 0x61, 0x7c, 0x7a, 0x45, 0xf6, 0xe0, 0x3a, 0xd9, 0x9a,
-	0xfb, 0x97, 0xe8, 0x04, 0x7a, 0x8a, 0x69, 0x61, 0x82, 0xce, 0xd8, 0x8f, 0x86, 0xd3, 0x7b, 0xd7,
-	0x5d, 0x73, 0x4a, 0x49, 0xc3, 0x0c, 0x4b, 0xb8, 0xe3, 0x4e, 0x4e, 0x88, 0x13, 0x3a, 0x2f, 0xc9,
-	0x30, 0x06, 0xb0, 0xe3, 0x5a, 0x6a, 0x0d, 0xec, 0x26, 0x17, 0xb0, 0xfe, 0x52, 0x51, 0x61, 0x94,
-	0xce, 0x5d, 0xb2, 0x0b, 0x58, 0x07, 0xce, 0xe5, 0x82, 0x5c, 0x34, 0x5b, 0xd7, 0x6c, 0x99, 0xa6,
-	0xba, 0xcc, 0x39, 0xe8, 0x36, 0x6c, 0x07, 0xc3, 0xef, 0x1e, 0xe0, 0x46, 0xe6, 0xdb, 0x08, 0x6f,
-	0x88, 0xf8, 0x5b, 0x22, 0xf8, 0x10, 0xf6, 0x32, 0x39, 0xa7, 0xec, 0x94, 0x32, 0x4a, 0x59, 0x17,
-	0xce, 0xc4, 0xf6, 0x21, 0xee, 0x43, 0x2f, 0x53, 0x0b, 0xc5, 0x41, 0x6f, 0xec, 0x45, 0x7e, 0xd2,
-	0x00, 0x1c, 0xc1, 0x20, 0xd5, 0x39, 0xab, 0xbc, 0xa4, 0xa0, 0x6f, 0xaf, 0x5d, 0xe2, 0xf0, 0x9b,
-	0x07, 0xfb, 0xce, 0xfc, 0x8b, 0x82, 0x24, 0xd3, 0x6d, 0xec, 0x0b, 0xb7, 0x28, 0xbe, 0x9d, 0x74,
-	0xeb, 0xc8, 0x9a, 0x2d, 0xfa, 0x67, 0x53, 0xa7, 0x3f, 0x7c, 0x18, 0x38, 0xae, 0xc1, 0x4f, 0x1e,
-	0x74, 0xed, 0x3a, 0x3d, 0x6e, 0x79, 0x72, 0xa3, 0xf7, 0xa3, 0x07, 0xff, 0xe1, 0x85, 0x47, 0x1f,
-	0x7f, 0xfe, 0xfa, 0xda, 0x79, 0x82, 0x87, 0xa2, 0x9a, 0x08, 0xa7, 0x69, 0xc4, 0xca, 0x55, 0x6b,
-	0xe1, 0xb2, 0x1a, 0xb1, 0x72, 0xd5, 0x5a, 0xac, 0x5c, 0xca, 0x35, 0x7e, 0xf6, 0xc0, 0x3f, 0x21,
-	0xc6, 0x47, 0x2d, 0x2a, 0x7f, 0x36, 0x70, 0xd4, 0xd6, 0x87, 0xf0, 0xd8, 0x1a, 0x79, 0x86, 0xb3,
-	0x1b, 0x18, 0x11, 0xab, 0x7a, 0x33, 0xd7, 0xf8, 0xc5, 0x83, 0x7e, 0x33, 0x3c, 0x8c, 0x5a, 0xb4,
-	0xb6, 0xe6, 0xdb, 0xee, 0xea, 0xb9, 0x75, 0x75, 0x14, 0xde, 0xa4, 0x3d, 0x33, 0x3b, 0xda, 0xe3,
-	0xee, 0x9b, 0x4e, 0x35, 0x99, 0xf7, 0xed, 0x8f, 0xe8, 0xf0, 0x77, 0x00, 0x00, 0x00, 0xff, 0xff,
-	0x58, 0x91, 0xc9, 0xc3, 0xd7, 0x04, 0x00, 0x00,
+	// 541 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xbc, 0x94, 0xc1, 0x6e, 0xd3, 0x40,
+	0x10, 0x86, 0xe5, 0x38, 0x49, 0xd3, 0x89, 0x7a, 0x60, 0x55, 0x55, 0x96, 0x5b, 0x41, 0x64, 0x01,
+	0x8a, 0x38, 0x78, 0x95, 0x54, 0x48, 0x28, 0xe5, 0x42, 0x01, 0xf5, 0x02, 0x42, 0x72, 0x6f, 0xdc,
+	0x36, 0x66, 0xa8, 0x16, 0x1c, 0x3b, 0xf5, 0x8e, 0x2d, 0x20, 0xca, 0x85, 0x33, 0x70, 0x00, 0xf1,
+	0x32, 0xbc, 0x04, 0x07, 0x5e, 0x81, 0x07, 0x41, 0xde, 0xdd, 0x84, 0x84, 0x16, 0x23, 0x35, 0x12,
+	0xb7, 0x99, 0x9d, 0xd9, 0x7c, 0x33, 0x7f, 0x7e, 0x2f, 0xec, 0x28, 0xcc, 0x4b, 0x19, 0x63, 0x38,
+	0xcd, 0x33, 0xca, 0x18, 0x7b, 0x5d, 0x8c, 0x31, 0x16, 0x79, 0x2e, 0x31, 0x0f, 0xc5, 0x54, 0x86,
+	0xe5, 0xc0, 0x3f, 0x38, 0xcb, 0xb2, 0xb3, 0x04, 0xb9, 0x98, 0x4a, 0x2e, 0xd2, 0x34, 0x23, 0x41,
+	0x32, 0x4b, 0x95, 0xb9, 0xe1, 0xef, 0xdb, 0xaa, 0xce, 0xc6, 0xc5, 0x4b, 0x8e, 0x93, 0x29, 0xbd,
+	0xb5, 0x45, 0x98, 0x20, 0x09, 0x13, 0x07, 0xe7, 0xb0, 0x75, 0x6a, 0x58, 0x6c, 0x04, 0x9d, 0xaa,
+	0xf0, 0x42, 0x90, 0xf0, 0x9c, 0x9e, 0xd3, 0xef, 0x0e, 0xaf, 0x87, 0x17, 0xc1, 0xe1, 0xb3, 0xf1,
+	0x2b, 0x8c, 0xe9, 0x29, 0x92, 0x88, 0x96, 0xfd, 0x8c, 0x41, 0x53, 0x4d, 0x31, 0xf6, 0x1a, 0x3d,
+	0xa7, 0xbf, 0x1d, 0xe9, 0x98, 0xed, 0x41, 0x5b, 0x91, 0xa0, 0x42, 0x79, 0xae, 0x3e, 0xb5, 0x59,
+	0xf0, 0x0e, 0xba, 0x16, 0xf9, 0x44, 0x2a, 0x62, 0xf7, 0x2e, 0x60, 0x0f, 0x2e, 0xc3, 0x56, 0xbd,
+	0x7f, 0x40, 0x07, 0xd0, 0x92, 0x84, 0x13, 0xe5, 0x35, 0x7a, 0x6e, 0xbf, 0x3b, 0xdc, 0xbf, 0xec,
+	0x9a, 0x25, 0x45, 0xa6, 0x33, 0x28, 0xe0, 0x9a, 0x3d, 0x39, 0x41, 0x8a, 0xf0, 0xbc, 0x40, 0x45,
+	0xcc, 0x83, 0x2d, 0xab, 0xb7, 0x1e, 0x60, 0x3b, 0x5a, 0xa4, 0x55, 0xa5, 0xc4, 0x5c, 0xc9, 0x2c,
+	0xb5, 0x9b, 0x2d, 0xd2, 0x6a, 0xe1, 0x54, 0x4c, 0xd0, 0xae, 0xa6, 0xe3, 0xaa, 0x5b, 0xc4, 0x71,
+	0x56, 0xa4, 0xe4, 0x35, 0x4d, 0xb7, 0x4d, 0x83, 0x37, 0xb0, 0x6b, 0xb1, 0x8f, 0x30, 0x41, 0xc2,
+	0xff, 0x47, 0xfe, 0xe6, 0x00, 0x5b, 0x51, 0x7b, 0x13, 0xf0, 0x0a, 0xc4, 0x5d, 0x83, 0xb0, 0x9b,
+	0xb0, 0x93, 0x88, 0x31, 0x26, 0xa7, 0x98, 0x60, 0x4c, 0x59, 0x6e, 0x87, 0x58, 0x3f, 0x64, 0xbb,
+	0xd0, 0x4a, 0xe4, 0x44, 0x92, 0xd7, 0xea, 0x39, 0x7d, 0x37, 0x32, 0x09, 0xf3, 0xa1, 0x13, 0x67,
+	0x29, 0xc9, 0xb4, 0x40, 0xaf, 0xad, 0xaf, 0x2d, 0xf3, 0xe0, 0xab, 0xb3, 0xd4, 0xed, 0x61, 0x8e,
+	0x62, 0x33, 0xdd, 0xb8, 0xb5, 0xa8, 0xab, 0x3d, 0x56, 0x6b, 0x16, 0xe3, 0xdf, 0xbf, 0x8a, 0x3a,
+	0xfc, 0xde, 0x84, 0x8e, 0xed, 0x55, 0xec, 0x83, 0x03, 0x4d, 0x6d, 0xe4, 0xdb, 0x35, 0x3f, 0xb9,
+	0xa2, 0xbd, 0x7f, 0xe3, 0x1f, 0x7d, 0xc1, 0xd1, 0xfb, 0x1f, 0x3f, 0xbf, 0x34, 0xee, 0xb2, 0x43,
+	0x5e, 0x0e, 0xb8, 0x65, 0x2a, 0x3e, 0xb3, 0xd1, 0x9c, 0xdb, 0x5d, 0x15, 0x9f, 0xd9, 0x68, 0xce,
+	0x67, 0x76, 0xcb, 0x39, 0xfb, 0xe8, 0x80, 0x7b, 0x82, 0xc4, 0x6e, 0xd5, 0x50, 0x7e, 0x7b, 0xdf,
+	0xaf, 0xd3, 0x21, 0x38, 0xd6, 0x83, 0xdc, 0x67, 0xa3, 0x2b, 0x0c, 0xc2, 0x67, 0x95, 0x33, 0xe7,
+	0xec, 0x93, 0x03, 0x6d, 0x63, 0x7a, 0xd6, 0xaf, 0x61, 0xad, 0x7d, 0x17, 0xfe, 0x5e, 0x68, 0xde,
+	0xaf, 0x70, 0xf1, 0x7e, 0x85, 0x8f, 0xab, 0xf7, 0x6b, 0x31, 0xd0, 0x9d, 0x4d, 0x06, 0xfa, 0xec,
+	0x40, 0xdb, 0xb8, 0xa9, 0x76, 0xa0, 0x35, 0xc3, 0xd5, 0xcb, 0xf4, 0x40, 0x4f, 0x75, 0x14, 0x5c,
+	0xe5, 0xff, 0x1a, 0x69, 0xaf, 0x1d, 0x37, 0x9f, 0x37, 0xca, 0xc1, 0xb8, 0xad, 0xd7, 0x3d, 0xfc,
+	0x15, 0x00, 0x00, 0xff, 0xff, 0xf6, 0xc7, 0xc9, 0xda, 0xff, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -409,6 +477,7 @@ const _ = grpc.SupportPackageIsVersion6
 type ServicesClient interface {
 	List(ctx context.Context, in *ServiceListRequest, opts ...grpc.CallOption) (*ServiceList, error)
 	Get(ctx context.Context, in *ServiceGetRequest, opts ...grpc.CallOption) (*Service, error)
+	Delete(ctx context.Context, in *ServiceDeleteRequest, opts ...grpc.CallOption) (*empty.Empty, error)
 	Create(ctx context.Context, in *ServiceCreateRequest, opts ...grpc.CallOption) (*Service, error)
 }
 
@@ -438,6 +507,15 @@ func (c *servicesClient) Get(ctx context.Context, in *ServiceGetRequest, opts ..
 	return out, nil
 }
 
+func (c *servicesClient) Delete(ctx context.Context, in *ServiceDeleteRequest, opts ...grpc.CallOption) (*empty.Empty, error) {
+	out := new(empty.Empty)
+	err := c.cc.Invoke(ctx, "/kubecarrier.api.v1.Services/Delete", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *servicesClient) Create(ctx context.Context, in *ServiceCreateRequest, opts ...grpc.CallOption) (*Service, error) {
 	out := new(Service)
 	err := c.cc.Invoke(ctx, "/kubecarrier.api.v1.Services/Create", in, out, opts...)
@@ -451,6 +529,7 @@ func (c *servicesClient) Create(ctx context.Context, in *ServiceCreateRequest, o
 type ServicesServer interface {
 	List(context.Context, *ServiceListRequest) (*ServiceList, error)
 	Get(context.Context, *ServiceGetRequest) (*Service, error)
+	Delete(context.Context, *ServiceDeleteRequest) (*empty.Empty, error)
 	Create(context.Context, *ServiceCreateRequest) (*Service, error)
 }
 
@@ -463,6 +542,9 @@ func (*UnimplementedServicesServer) List(ctx context.Context, req *ServiceListRe
 }
 func (*UnimplementedServicesServer) Get(ctx context.Context, req *ServiceGetRequest) (*Service, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Get not implemented")
+}
+func (*UnimplementedServicesServer) Delete(ctx context.Context, req *ServiceDeleteRequest) (*empty.Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Delete not implemented")
 }
 func (*UnimplementedServicesServer) Create(ctx context.Context, req *ServiceCreateRequest) (*Service, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Create not implemented")
@@ -508,6 +590,24 @@ func _Services_Get_Handler(srv interface{}, ctx context.Context, dec func(interf
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Services_Delete_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ServiceDeleteRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ServicesServer).Delete(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/kubecarrier.api.v1.Services/Delete",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ServicesServer).Delete(ctx, req.(*ServiceDeleteRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _Services_Create_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(ServiceCreateRequest)
 	if err := dec(in); err != nil {
@@ -537,6 +637,10 @@ var _Services_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Get",
 			Handler:    _Services_Get_Handler,
+		},
+		{
+			MethodName: "Delete",
+			Handler:    _Services_Delete_Handler,
 		},
 		{
 			MethodName: "Create",
